Add RRD, Stomp and SVM

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
         "memcached",
         "phpdoc",
         "redis",
+        "rrd",
+        "snmp",
+        "stomp",
+        "svm",
         "xml"
     ],
     "homepage": "https://github.com/KazuakiM/extension-phpdoc",
