--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "snmp",
         "stomp",
         "svm",
+        "varnish",
         "xml"
     ],
     "homepage": "https://github.com/KazuakiM/extension-phpdoc",
