--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -17,7 +17,7 @@ return PhpCsFixer\Config::create()
         'no_extra_consecutive_blank_lines' => ['break', 'continue', 'extra', 'return', 'throw', 'use', 'parenthesis_brace_block', 'square_brace_block', 'curly_brace_block'],
         //'no_null_property_initialization' => true,
         'no_short_echo_tag' => true,
-        'no_unreachable_default_argument_value' => true,
+        'no_unreachable_default_argument_value' => false,
         'no_useless_else' => true,
         'no_useless_return' => true,
         'ordered_class_elements' => true,
