--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
   - 7.1
 
 before_script:
+  - phpenv config-rm xdebug.ini
   - composer require friendsofphp/php-cs-fixer
   - composer install --no-progress --no-ansi --no-interaction --profile
 
